fix bug 130441 and 122584 support surrogate in text-align: jutify , selection and cusor movement r=shanjian/smontagu sr=kin a=asa