gfx/src/windows/nsFontMetricsWin.cpp
@@ -3474,10 +3474,6 @@ nsFontMetricsWin::LocateFont(HDC aDC, PRUint32 aChar, PRInt32 & aCount)
   return font;
 }
 
-#define IS_HIGH_SURROGATE(u)  ((PRUnichar)(u) >= (PRUnichar)0xd800 && (PRUnichar)(u) <= (PRUnichar)0xdbff)
-#define IS_LOW_SURROGATE(u)  ((PRUnichar)(u) >= (PRUnichar)0xdc00 && (PRUnichar)(u) <= (PRUnichar)0xdfff)
-#define SURROGATE_TO_UCS4(h, l)  ((((PRUint32)(h)-(PRUint32)0xd800) << 10) +  \
-                                    (PRUint32)(l) - (PRUint32)(0xdc00) + 0x10000)
 nsresult
 nsFontMetricsWin::ResolveForwards(HDC                  aDC,
                                   const PRUnichar*     aString,
