intl/unicharutil/util/nsUnicharUtils.h
@@ -19,7 +19,8 @@
  *
  * Contributor(s): 
  */
-
+#ifndef nsUnicharUtils_h__
+#define nsUnicharUtils_h__
 #ifndef nsAString_h___
 #include "nsAString.h"
 #endif
@@ -60,3 +61,12 @@ inline PRBool IsUpperCase(PRUnichar c) {
 inline PRBool IsLowerCase(PRUnichar c) {
     return ToLowerCase(c) == c;
 }
+
+#define IS_HIGH_SURROGATE(u)  ((PRUnichar)(u) >= (PRUnichar)0xd800 && (PRUnichar)(u) <= (PRUnichar)0xdbff)
+#define IS_LOW_SURROGATE(u)  ((PRUnichar)(u) >= (PRUnichar)0xdc00 && (PRUnichar)(u) <= (PRUnichar)0xdfff)
+
+#define SURROGATE_TO_UCS4(h, l)  ((((PRUint32)(h)-(PRUint32)0xd800) << 10) +  \
+                                    (PRUint32)(l) - (PRUint32)(0xdc00) + 0x10000)
+
+
+#endif  /* nsUnicharUtils_h__ */
